--- a/workloads/podinfo-dep.yaml
+++ b/workloads/podinfo-dep.yaml
@@ -3,14 +3,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: podinfo
-  namespace: demo
-  labels:
-    app: podinfo
   annotations:
     flux.weave.works/automated: "true"
     flux.weave.works/tag.init: regexp:^3.*
     flux.weave.works/tag.podinfod: semver:~1.3
 spec:
+  minReadySeconds: 5
+  progressDeadlineSeconds: 60
   strategy:
     rollingUpdate:
       maxUnavailable: 0
@@ -25,41 +24,37 @@ spec:
       labels:
         app: podinfo
     spec:
-      initContainers:
-      - name: init
-        image: alpine:3.10
-        command:
-        - sleep
-        - "1"
       containers:
       - name: podinfod
-        image: stefanprodan/podinfo:1.3.2
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 9898
-          name: http
-          protocol: TCP
+        image: quay.io/stefanprodan/podinfo:1.4.3
         command:
-        - ./podinfo
-        - --port=9898
-        - --level=info
-        - --random-delay=false
-        - --random-error=false
-        env:
-        - name: PODINFO_UI_COLOR
-          value: green
+          - ./podinfo
+          - --port=9898
+          - --level=debug
+        ports:
+        - name: http
+          containerPort: 9898
+          protocol: TCP
         livenessProbe:
-          httpGet:
-            path: /healthz
-            port: 9898
+          exec:
+            command:
+            - /bin/sh
+            - -c
+            - wget --quiet --tries=1 --spider http://localhost:9898/healthz || exit 1
         readinessProbe:
-          httpGet:
-            path: /readyz
-            port: 9898
+          exec:
+            command:
+            - /bin/sh
+            - -c
+            - wget --quiet --tries=1 --spider http://localhost:9898/readyz || exit 1
         resources:
-          limits:
-            cpu: 1000m
-            memory: 128Mi
           requests:
-            cpu: 10m
-            memory: 64Mi
+            memory: "32Mi"
+            cpu: "10m"
+        env:
+          - name: color
+            value: "blue"
+          - name: message
+            value: "Greetings from podinfo blue"
+          - name: backendURL
+            value: "http://podinfo-backend:9898/backend"
